some touch ups, fixed completed and hidden goals button to have black font on mobile, changed position of edit goal remove btn, added a refresh button, changed login warning

--- a/src/components/Login/login.css
+++ b/src/components/Login/login.css
@@ -54,7 +54,7 @@
     font-weight: bold;
     /* border: solid black; */
 }
-.sign-in-btn-a {
+.sign-in-btn {
     cursor: pointer;
     color: white;
     font-weight: bold;
@@ -65,6 +65,17 @@
     padding: 10px 25px;
     width: 40%;
     
+}
+
+@media screen and (max-width:920px){
+    .sign-in-btn {
+        padding: 0px;
+
+    }
+    .google-sign-in-btn{
+        padding: 5px 12px;
+    }
+
 }
 .send-reset-btn {
     cursor: pointer;
